--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,7 @@
 						<div class="feature-copy">
 							<h3>LAIA Database</h3>
 							<p> A decentralized and secure Environmental Data platform for researchers, citizen scientists and activists based on a network of trust and anonymity.</p>
-							<a href="projects/laiadb/index.html" target="_blank"><span>READ MORE</span></a>
+							<a href="laiadb/index.html" target="_blank"><span>READ MORE</span></a>
 						</div>
 					</div>
 
