index.html menu fixed

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 				
 				<div class="gtco-tabs">
 					<ul class="gtco-tab-nav">
-						<li class="active"><a href="#" data-tab="1"><span class="icon visible-xs"><i class="icon-command"></i></span><span class="hidden-xs">Agroecology</span></a></li>
-						<li><a href="#" data-tab="2"><span class="icon visible-xs"><i class="icon-bar-graph"></i></span><span class="hidden-xs">Free and Open Technology</span></a></li>
-						<li><a href="#" data-tab="3"><span class="icon visible-xs"><i class="icon-bag"></i></span><span class="hidden-xs">Data Analysis</span></a></li>
-							<li><a href="#" data-tab="4"><span class="icon visible-xs"><i class="icon-bag"></i></span><span class="hidden-xs">Courses and Workshops</span></a></li>
+						<li class="active"><a href="#" data-tab="1"></i></span><span>Agroecology</span></a></li>
+						<li><a href="#" data-tab="2"></i></span><span>Free and Open Technology</span></a></li>
+						<li><a href="#" data-tab="3"></i></span><span>Data Analysis</span></a></li>
+							<li><a href="#" data-tab="4"></i></span><span>Courses and Workshops</span></a></li>
 					</ul>
 
 					<!-- Tabs -->
