fixing menu in data and course, editing menu in style.css

--- a/courses.html
+++ b/courses.html
@@ -183,23 +183,25 @@
     <input id="tab3" type="radio" name="tabs">
     <label for="tab3">Ecology and Society</label>
     
-    <section id="content1">
+    <div class="content">
+    <div id="content1">
       <p> Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.</p>
       <p>Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.</p>
-   </section>
+   </div>
 
-    <section id="content2">
+    <div id="content2">
       <p>Freedom is for Everyone</p>
       <p> The concepts of freedom in free technology most of time is strongly developers oriented. At the end of the day users can see how the importance of freedom concepts associated to software and hardware in their daily life and as a dimension of social activities.</p>
       <p>Periodically we offer courses and workshops on GNU/Linux, security, programing languages and projects in technology focused on users.</p>
-    </section>
+    </div>
 
-    <section id="content3">
+    <div id="content3">
       <p> The courses and meetings covering this subject are proposed to arouse in a broad audience the debate about the events we are experiencing in the anthropocene and the real proposals to overcome the deep social/environmental crisis.</p>
       <p>Right now we leave in a crucial moment of the environmental crisis in which almost (if not all) liberal alternatives to revert an iminent colapse had failed. From carbon credit to the payment for ecosystem services, none of this market-oriented ideas gave us a real solution. On the contrary, in most of these examples, what we see was an enhancing of the crisis. </p>
-    </section>
+    </div>
   
     </div>
+  </div>
   </div>
 
 	<div class="gtco-section">
