--- a/data.html
+++ b/data.html
@@ -170,7 +170,8 @@
     <input id="tab3" type="radio" name="tabs">
     <label for="tab3">Dynamic Documents</label>
 
-    <section id="content1">
+    <div class="content">
+      <div id="content1">
         <div class="column">
         <h3> The First For Data Communication</h3>
         <p> Data analysis is a crucial step on ecological studies in order to reach the main information which will be the base for the further steps, including data plot, statistical analysis, reports and the taking of decisions.</p>
@@ -189,9 +190,9 @@
 							<img src="images/plot.png">
 					</div>
         </div>
-   </section>
+   </div>
 
-    <section id="content2">
+    <div id="content2">
         <div class="column">
       <h3>Information and Concision.</h3>
       <p> Data plot is a very informative tool and synthesize a big amount of information in a simple and direct representation. Thus, the nature of the dataset must be understood and then the best representation is applied.</p>
@@ -206,9 +207,9 @@
 							<img src="images/plot.png">
 					</div>
         </div>
-    </section>
+    </div>
 
-    <section id="content3">
+    <div id="content3">
         <div class="column">
       <h3>From Static to Dynamic</h3>
       <p>Combining the usability of webpages and the power of different packages, the use of dynamic documents have big advantages over other digital formats. The use of dynamic documents in HTML format allows to integrate different langages and communicate in a very straightforward way.</p>
@@ -226,10 +227,11 @@
 							<img src="images/plot.png">
 					</div>
         </div>
-    </section>
+    </div>
     </div>
   </div>
-  
+</div>
+
 	<div id="gtco-testimonial">
 		<div class="gtco-container">
 		
