fix slide in courses.html and delete courses menu lines in style.css

--- a/courses.html
+++ b/courses.html
@@ -214,39 +214,29 @@
 	
 	  	<div class="row">
 				<div class="col-md-8">
-	<div id="gtco-course">
-		<div class="gtco-container">
-			<!-- <div class="row"> -->
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center gtco-testem">
-					</div>
-				</div>
-				<div class="row animate-box">
-				
-					<div class="owl-carousel owl-carousel-fullwidth ">
-						<div class="item">
-							<div class="course-slide active text-center">
-								<figure>
-									<img src="images/courses/riego.png" alt="">
-								</figure>
-							</div>
-						</div>
-						<div class="item">
-							<div class="course-slide active text-center">
-								<figure>
-									<img src="images/courses/model2.png" alt="">
-								</figure>
-							</div>
-						</div>
-					</div>
-				</div>
-			<!-- </div> -->
-		</div>
-	</div>
+  <img class="mySlides w3-animate-fading" src="images/courses/model2.png" style="width:70%">
+  <img class="mySlides w3-animate-fading" src="images/courses/riego.png" style="width:70%">
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}    
+  x[myIndex-1].style.display = "block";  
+  setTimeout(carousel, 5000);    
+}
+</script>
 			</div>
 			
 				
-				<div class="col-md-4">
+				<div class="col-md-1">
 				<style>
     		#calendarHere {
   			position: relative;
