update courses.html and index.html

--- a/courses.html
+++ b/courses.html
@@ -185,8 +185,7 @@
     
     <div class="content">
     <div id="content1">
-      <p> Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.</p>
-      <p>Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.</p>
+      <p> The Mediterranean is a diversity hotspot, following its essence we organize courses on agrobiodiversity, local traditional varieties: its origins and importance, and how to reproduce their seeds. Hands-on courses to understand how a garden works are also organized at Cal Teixidor's and other orchards. Aromatic plants' usage and recognition is also shared.</p>
    </div>
 
     <div id="content2">
