--- a/index.html
+++ b/index.html
@@ -208,9 +208,11 @@
               	<div class="row">
 									<div class="col-md-6">
 										<h2 class="uppercase">Real World, Real Cases</h2>
+										<p>Recovering the endangered traditional knowdlege</p>
 									</div>
 									<div class="col-md-6">
 										<h2 class="uppercase">Critical Thoughts for Autonomy</h2>
+										<p>New approaches, alternative interactions</p>
 									</div>
 								</div>
 
@@ -249,7 +251,7 @@
 							<div class="col-md-6">
 								<h2>Data as Evidence</h2>
 				        <p>Data is more than cold numbers. Data is sampled according to specific questions or reasons. We can see data as a potential evidence for our studies and further decisions and initiatives. From the impact of large scale agriculture or industrial activities to socioenvironmental crisis in conflict zones. </p>
-								<p>At the same time there are ethical principles related to the use of data and risks associated to censorship and centralized interests. Thus, alternative decentralized structures and open access to the data are important to protect and enhance understanding in a trustful network.</p>
+								<p>At the same time there are ethical principles related to the use of data and risks associated to censorship and centralized interests. Thus, alternative decentralized structures and open access to the data in a trustful network are important.</p>
 								<div class="row">
 									<div class="col-md-6">
 										<h2 class="uppercase">Management and Statistical Analysis of Data</h2>
@@ -270,12 +272,12 @@
 							</div>
 							<div class="col-md-6">
 								<h2>Dialogue of Knowdlege, Ecology of Thoughts</h2>
-								<p>Teaching and learning are more than education.It is a field where social and academic knowledge can dialogue and the critical consciousness takes place. A dynamic process to create possibilities of challenging and overcome any kind of opression.</p>
+								<p>Teaching and learning together. A space where knowdlege from social struggles, and theories for emancipation dialogue to generate a critical consciousness for transformation. A dynamic process that aims to challenge hierarchies and oppressions in the learning process.</p>
 
 								<div class="row">
 									<div class="col-md-6">
-										<h2 class="uppercase">We Don Not Like Walls</h2>
-										<p>From Ecology to technology, our Courses, Workshops and Meetings aim general public.</p>
+										<h2 class="uppercase">We Do Not Like Walls</h2>
+										<p>From Ecology to technology, our Courses, Workshops and Meetings are for everyone.</p>
 									</div>
 									<div class="col-md-6">
 										<h2 class="uppercase">Online</h2>
