--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
 		<div class="gtco-container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-history gtco-heading-sm">
-					<h2>MANIFESTO</h2>
+					<h2>Overcoming A Mechanized Society. Recovering The Ecological Thougth</h2>
 				</div>
 			</div>
 			<div class="col-md-10 col-md-offset-1">
