--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 				<div class="gtco-tabs">
 					<ul class="gtco-tab-nav">
 						<li class="active"><a href="#" data-tab="1"></i></span><span>Agroecology</span></a></li>
-						<li><a href="#" data-tab="2"></i></span><span>Free and Open Technology</span></a></li>
+						<li><a href="#" data-tab="2"></i></span><span>Technology</span></a></li>
 						<li><a href="#" data-tab="3"></i></span><span>Data Analysis</span></a></li>
-							<li><a href="#" data-tab="4"></i></span><span>Courses and Workshops</span></a></li>
+							<li><a href="#" data-tab="4"></i></span><span>Courses</span></a></li>
 					</ul>
 
 					<!-- Tabs -->
