update footer from html

--- a/data.html
+++ b/data.html
@@ -300,9 +300,9 @@
 			<div class="row copyright">
 					<p class="col-md-1">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-						  <li><a href="https://gitlab.com/CSEFT"><i class="icon-git"></i></a></li>
+								<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</p>
 				</div>
