--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,7 @@
 						<div class="feature-copy">
 							<h3>LAIA Database</h3>
 							<p> A decentralized and secure Environmental Data platform for researchers, citizen scientists and activists based on a network of trust and anonymity.</p>
-							<a href="laiadb/index.html" target="_blank"><span>READ MORE</span></a>
+							<a href="projects/laiadb/index.html" target="_blank"><span>READ MORE</span></a>
 						</div>
 					</div>
 
@@ -282,9 +282,9 @@
 			<div class="row copyright">
 					<p class="col-md-1">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-						  <li><a href="https://gitlab.com/CSEFT"><i class="icon-git"></i></a></li>
+								<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</p>
 				</div>
