--- a/about.html
+++ b/about.html
@@ -209,8 +209,9 @@
 						<h3>Shadow-Snake</h3>
 						<strong class="role">Hardware Designer</strong>
 						<ul class="gtco-social-icons-profile">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="https://gitlab.com/CSEFT"><i class="icon-git"></i></a></li>
+								<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</div>
 				</div>
