--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 					<ul class="gtco-tab-nav">
 						<li class="active"><a href="#" data-tab="1"></i></span><span>Agroecology</span></a></li>
 						<li><a href="#" data-tab="2"></i></span><span>Technology</span></a></li>
-						<li><a href="#" data-tab="3"></i></span><span>Data Analysis</span></a></li>
+						<li><a href="#" data-tab="3"></i></span><span>Data</span></a></li>
 							<li><a href="#" data-tab="4"></i></span><span>Courses</span></a></li>
 					</ul>
 
@@ -346,9 +346,9 @@
 			<div class="row copyright">
 					<p class="col-md-1">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-						  <li><a href="https://gitlab.com/CSEFT"><i class="icon-git"></i></a></li>
+							<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</p>
 				</div>
