--- a/about.html
+++ b/about.html
@@ -218,7 +218,6 @@
 			</div>
 		</div>
 	</div>
-	</div>
 
 	<footer id="gtco-footer" role="contentinfo">
 		<div class="gtco-container">
@@ -240,9 +239,9 @@
 			<div class="row copyright">
 					<p class="col-md-1">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-						  <li><a href="https://gitlab.com/CSEFT"><i class="icon-git"></i></a></li>
+							<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</p>
 				</div>
