update links in footer

--- a/about.html
+++ b/about.html
@@ -181,40 +181,40 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
 						<img src="images/member_1.jpeg" alt="Free Hardware and Ecology">
 						<h3>Saulo Jacques</h3>
 						<strong class="role">Ecosystem Ecologist and Free Technology Developer</strong>
 						<ul class="gtco-social-icons-profile">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="https://github.com/smjacques" target="_blank"><i class="icon-github"></i></a></li>
+							<!-- <li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://github.com/smjacques" target="_blank"><i class="icon-github"></i></a></li> -->
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4 animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
 						<img src="images/member_2.jpeg" alt="">
 						<h3>Joel Segarra</h3>
 						<strong class="role">Agroecologist</strong>
-						<ul class="gtco-social-icons-profile">
+						<!--<ul class="gtco-social-icons-profile">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
+						</ul> -->
 					</div>
 				</div>
-				<div class="col-md-4 animate-box" data-animate-effect="fadeIn">
+				<!-- <div class="col-md-4 animate-box" data-animate-effect="fadeIn">
 					<div class="gtco-staff">
 						<img src="images/member_3.jpeg" alt="">
 						<h3>Shadow-Snake</h3>
 						<strong class="role">Hardware Designer</strong>
 						<ul class="gtco-social-icons-profile">
 								<li><a href="https://twitter.com/TeixidorCal"><i class="icon-twitter"></i></a></li>
-							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
 						  <li><a href="https://github.com/calteixidor"><i class="icon-git"></i></a></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
@@ -229,10 +229,10 @@
 				<div class="col-md-2 col-md-push-3">
 					<ul class="gtco-footer-links">
 						<li><a href="about.html">About</a></li>
-						<li><a href="activities.html">Activities</a></li>
+						<li><a href="agroecology.html">Agroecology</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="#">Learning</a></li>
+						<li><a href="courses.html">Learning</a></li>
 					</ul>
 				</div>
 
