--- a/contact.html
+++ b/contact.html
@@ -227,10 +227,10 @@
 				<div class="col-md-2 col-md-push-3">
 					<ul class="gtco-footer-links">
 						<li><a href="about.html">About</a></li>
-						<li><a href="activities.html">Activities</a></li>
+						<li><a href="agroecology.html">Agroecology</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="#">Learning</a></li>
+						<li><a href="courses.html">Learning</a></li>
 					</ul>
 				</div>
 
