update contact links

--- a/contact.html
+++ b/contact.html
@@ -208,6 +208,9 @@
 						<ul>
 							<li class="icon-location"> Granollers, Barcelona</li>
 							<li class="icon-display"><a href="mailto:seft@riseup.net">Email</a></li>
+							<li class="icon-twitter"><a href="https://twitter.com/TeixidorCal"> Twitter</a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li> -->
+						  <li class="icon-github"><a href="https://github.com/calteixidor">Github</a></li>
 						</ul>
 					</div>
 
