change project picture

--- a/projects.html
+++ b/projects.html
@@ -206,8 +206,7 @@
 
 				<div class="col-md-6">
 					<div class="gtco-video gtco-bg" style="background-image: url(images/img_1.jpg); ">
-						<a href="https://vimeo.com/example" class="popup-vimeo"><i class="icon-play"></i></a>
-						<div class="overlay"></div>
+						<img src="images/project.png"></a>
 					</div>
 				</div>
 			</div>
