--- a/about.html
+++ b/about.html
@@ -165,14 +165,46 @@
 					<h2>OUR VISION </br> What we stand for</h2>
 				</div>
 			</div>
-			<div class="col-md-10 col-md-offset-1">
-					<p>In the last decades we have witnessed the intensification of production. The current consumption patterns demand more resources, and therefore socio-environmental exploitation is intensifying.  The pollution resulted from all of the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a growing environmental crisis. Climate change is already a reality, with many extreme events being experienced around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
-          <p>These problems are not just a matter of the so-called ‘nature’, but affect the society directly. The ecological crisis is deeply-rooted in social problems and we find ourselves entrapped inside a technological megastructure aiming both human and ecological exploitation. The technological devices become even more complex deepening the systemic crisis and a shift on the social behavior. Hence this system of endless ecosocial crisis is maintained by the current social alienation and the lack of sovereignty and autonomy on resources management, food production, environmental conservation, health and technology.</p>
-        <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. In this sense a collective learning, a dialogue of knowledge for a wider understanding, is crucial for building the bases for social autonomy. Collective actions for collective problems. The use of free tools that promote communities’ sovereignty is the key to move towards a real change challenging the current hierarchical impositive system.</p>
-          <p>Cal Teixidor (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together technology, grassroots participation and ecology in which freedom and autonomy can flourish. We are founded on three pillars: the environment, free-libre and open technologies, and society. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build up a real transformation.</p>
-				</div>
-			</div>	
+		</div>
 	</div>
+	
+		<div class="gtco-section">
+		<div class="gtco-container">
+			<div class="col-md-8 col-md-offset-0 row animate-box">
+			
+			<h2> The Unatural Speed of Life </h2>
+					<p>In the last decades we have witnessed the <b>intensification of production</b> due the current consumption patterns that demand more resources. The pollution resulted from all of the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events being experienced around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
+					</div>
+				</div>
+			</div>
+			
+	 	<div class="gtco-section">
+	  	<div class="gtco-container">
+	  		<div class="col-md-20 col-md-offset-5 row animate-box">
+		
+			<h2> The Root of the Crisis </h2>
+			
+          <p>These problems are not just a matter of the so-called ‘nature’, but are driven by modern societal dynamic and affect nature as well as the society itself. The human's existence and survival had became dependent of technological devices ever more complex and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>
+          
+          <p>The ecological crisis is deeply-rooted in social problems and is maintained by the current social and environmental alienation, the lack of sovereignty and autonomy on resources management, food production, environmental conservation, health and technology.</p>
+      </div>    
+		</div>
+	</div>
+			
+			<div class="gtco-section">
+		    <div class="gtco-container">
+          <div class="col-md-11 col-md-offset-0 row animate-box">
+          <center>
+          <h2> Collective Action for Collective Problems </h2>
+          </center>
+        <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. We consider collective learning, a dialogue of knowledge for a wider understanding, as crucial for building the bases for social autonomy.</p>
+        <p>Thriving into <b>free tools, that promote communities’ sovereignty</b>, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together technology, grassroots participation and ecology in which freedom and autonomy can flourish. We are founded on three pillars: the environment, free-libre and open technologies, and agroecology. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. <b>The integration of these aspects allows to connect the nodes and expand the edges to build a real transformation</b>.</p>
+        </div>
+				</div>
+			</div>
+      
+      <div class="gtco-section">
+		  </div>
 
 	<div id="gtco-team" class="gtco-section" style="background-image:url(images/img_bg_3.jpg);">
 		<div class="gtco-container">
