--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
           <h2> Collective Action for Collective Problems </h2>
           </center>
         <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. We consider collective learning, a dialogue of knowledge for a wider understanding, as crucial for building the bases for social autonomy.</p>
-        <p>Thriving into <b>free tools, that promote communities’ sovereignty</b>, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together technology, grassroots participation and ecology in which freedom and autonomy can flourish. We are founded on three pillars: the environment, free-libre and open technologies, and agroecology. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. <b>The integration of these aspects allows to connect the nodes and expand the edges to build a real transformation</b>.</p>
+        <p>Thriving into free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>the environment</i>, free-libre and open technologies, and agroecology<b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
         </div>
 				</div>
 			</div>
@@ -219,8 +219,8 @@
 						<h3>Saulo Jacques</h3>
 						<strong class="role">Ecosystem Ecologist and Free Technology Developer</strong>
 						<ul class="gtco-social-icons-profile">
-							<!-- <li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="https://github.com/smjacques" target="_blank"><i class="icon-github"></i></a></li> -->
+							<li><a href="https://smjacques.github.io/"><i class="icon-home"></i></a></li>
+							<li><a href="https://github.com/smjacques" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
