--- a/laiadb/index.html
+++ b/laiadb/index.html
@@ -81,7 +81,7 @@
   <h3 style="text-align:center; font-size:2vw">AUTONOMY, SECURITY AND FREEDOM</h3>
   <p style="font-size:1.4vw">LAIA is the best way for Citizen Science projects to communicate and have their data gathered together and easily available</p>
   <p style="font-size:1.4vw">Data is knowledge! Ensure data sharing and storage while protecting them against different types of malicious attacks and censorship</p>
-  <p style="font-size:1.4vw">Digital life. Real Life! A private Peer-to-Peer (P2P) topology where trusted peers are connected in the network.</p>
+  <p style="font-size:1.4vw">Digital life. Real Life! A private Peer-to-Peer (P2P) topology where trusted peers are connected in the network</p>
   <p></p>
 </div>
 
