update css file

--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
 						<h3>Saulo Jacques</h3>
 						<strong class="role">Ecosystem Ecologist and Free Technology Developer</strong>
 						<ul class="gtco-social-icons-profile">
-							<li><a href="https://smjacques.github.io/"><i class="icon-home"></i></a></li>
+							<li><a href="https://smjacques.github.io/" target="_blank"><i class="icon-home"></i></a></li>
 							<li><a href="https://github.com/smjacques" target="_blank"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
