--- a/about.html
+++ b/about.html
@@ -1,129 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-<style type="text/css">
-.inline {
-  background-color: #f7f7f7;
-  border:solid 1px #B0B0B0;
-}
-.error {
-	font-weight: bold;
-	color: #FF0000;
-}
-.warning {
-	font-weight: bold;
-}
-.message {
-	font-style: italic;
-}
-.source, .output, .warning, .error, .message {
-	padding: 0 1em;
-  border:solid 1px #F7F7F7;
-}
-.source {
-  background-color: #f5f5f5;
-}
-.left {
-  text-align: left;
-}
-.right {
-  text-align: right;
-}
-.center {
-  text-align: center;
-}
-.hl.num {
-  color: #AF0F91;
-}
-.hl.str {
-  color: #317ECC;
-}
-.hl.com {
-  color: #AD95AF;
-  font-style: italic;
-}
-.hl.opt {
-  color: #000000;
-}
-.hl.std {
-  color: #585858;
-}
-.hl.kwa {
-  color: #295F94;
-  font-weight: bold;
-}
-.hl.kwb {
-  color: #B05A65;
-}
-.hl.kwc {
-  color: #55aa55;
-}
-.hl.kwd {
-  color: #BC5A65;
-  font-weight: bold;
-}
-</style>
-<style type="text/css">
-.inline {
-  background-color: #f7f7f7;
-  border:solid 1px #B0B0B0;
-}
-.error {
-	font-weight: bold;
-	color: #FF0000;
-}
-.warning {
-	font-weight: bold;
-}
-.message {
-	font-style: italic;
-}
-.source, .output, .warning, .error, .message {
-	padding: 0 1em;
-  border:solid 1px #F7F7F7;
-}
-.source {
-  background-color: #f5f5f5;
-}
-.left {
-  text-align: left;
-}
-.right {
-  text-align: right;
-}
-.center {
-  text-align: center;
-}
-.hl.num {
-  color: #AF0F91;
-}
-.hl.str {
-  color: #317ECC;
-}
-.hl.com {
-  color: #AD95AF;
-  font-style: italic;
-}
-.hl.opt {
-  color: #000000;
-}
-.hl.std {
-  color: #585858;
-}
-.hl.kwa {
-  color: #295F94;
-  font-weight: bold;
-}
-.hl.kwb {
-  color: #B05A65;
-}
-.hl.kwc {
-  color: #55aa55;
-}
-.hl.kwd {
-  color: #BC5A65;
-  font-weight: bold;
-}
 </style>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -225,10 +101,11 @@
           	<div class="col-md-12 col-md-offset-0 animate-box">
         
         <h2> The Unatural Speed of Life </h2>
-					<p>In the last decades we have witnessed the <b>intensification of production</b> due the current consumption patterns that demand more resources. The pollution resulted from all of the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events being experienced around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
+					<p>In the last decades we have witnessed an <b>intensification of production</b> due to the current consumption patterns that demand more resources. The pollution resulted from all the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events happening around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
 			
-        <h2> The Root of the Crisis </h2>
-          <p>These problems are not just a matter of the so-called ‘nature’, but are driven by modern societal dynamic and affect nature as well as the society itself. The human's existence and survival had became dependent of technological devices ever more complex and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>          <p>The ecological crisis is deeply-rooted in social problems and is maintained by the current social and environmental alienation, the lack of sovereignty and autonomy on resources management, food production, environmental conservation, health and technology.</p>
+        <h2> The Roots of the Crisis </h2>
+          <p>These problems are not just a matter of the so-called ‘nature’, but affect the society directly. The human existence and survival has become dependent on even more complex technological devices, and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>
+          <p>The ecological crisis is deeply rooted in social problems and it is maintained by the current social and environmental alienation, the lack of sovereignty and autonomy on resources management, food production, environmental conservation, health and technology.</p>
       </div>    
 		</div>
 				</section>
@@ -249,7 +126,7 @@
          <div class="container">
 				<div class="col-md-12 col-md-offset-0 animate-box">
           <center>
-          <h2> Collective Action for Collective Problems </h2>
+          <h2> Collective Actions for Collective Problems </h2>
           </center>
         <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. We consider collective learning, a dialogue of knowledge for a wider understanding, as crucial for building the bases for social autonomy.</p>
         <p>Thriving into free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>the environment</i>, free-libre and open technologies, and agroecology</b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
