--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
           	<div class="col-md-12 col-md-offset-0 animate-box">
         
         <h2> The Unatural Speed of Life </h2>
-					<p>In the last decades we have witnessed an <b>intensification of production</b> due to the current consumption patterns that demand more resources. The pollution resulted from all the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events happening around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
+					<p>In the last decades we have witnessed an <b>intensification of production</b> due to the current consumption patterns that demand for more resources. The pollution resulted from all the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events happening around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
 			
         <h2> The Roots of the Crisis </h2>
           <p>These problems are not just a matter of the so-called ‘nature’, but affect the society directly. The human existence and survival has become dependent on even more complex technological devices, and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>
